# openMVG

src/: CMakeLists.txt
src/cmakeFindModules/: FindOpenMVG.cmake
src/nonFree/: CMakeLists.txt
src/nonFree/siftGPU/: CMakeLists.txt  README.openMVG  SIFTGPU_describer.hpp
src/nonFree/siftGPU/SiftGPU/: makefile
src/openMVG/: CMakeLists.txt
src/openMVG/exif/sensor_width_database/: ParseDatabase.hpp  sensor_width_camera_database.txt
src/openMVG/features/: regions.hpp  regions_factory.hpp
src/openMVG/geometry/: Similarity3.hpp
src/openMVG/image/: image_diffusion.hpp  image_io.cpp
src/openMVG/matching/: matcher_kdtree_flann.hpp  matcher_type.hpp  matching_filters.hpp
src/openMVG/matching_image_collection/: CMakeLists.txt  Matcher_Regions_SiftGPU.cpp  Matcher_Regions_SiftGPU.hpp
src/openMVG/multiview/: rotation_averaging_l2.cpp  translation_averaging_solver_l2_chordal.cpp  translation_averaging_solver_softl1.cpp
src/openMVG/sfm/: sfm_data.hpp  sfm_data_BA.hpp  sfm_data_BA_ceres.cpp  sfm_data_BA_ceres.hpp  sfm_data_BA_ceres_drift_functor.hpp  sfm_data_io.hpp  sfm_data_io_cereal.hpp  sfm_landmark.hpp  sfm_uncertainty.cpp  sfm_uncertainty.hpp
src/openMVG/sfm/pipelines/: CMakeLists.txt
src/openMVG/sfm/pipelines/global/: GlobalSfM_translation_averaging.cpp
src/openMVG/sfm/pipelines/incremental/: SlamPP_GraphFileExport.hpp  incremental_SfM.cpp  incremental_SfM.hpp
src/openMVG/sfm/pipelines/sequential/: sequential_SfM.cpp  sequential_SfM.hpp
src/openMVG/vsslam/: CMakeLists.txt  Camera.hpp  Export.hpp  Frame.cpp  Frame.hpp  MapLandmark.cpp  MapLandmark.hpp  SLAM_Monocular.hpp  VSSLAM_Data.hpp  vsslam_data.hpp  vsslam_parameters.hpp
src/openMVG/vsslam/detection/: Abstract_FeatureExtractor.hpp  Feat_Extractor_FastDipole.hpp  Feat_Extractor_SIFT.hpp
src/openMVG/vsslam/display/: vsslam_display.hpp  vsslam_time_stats.hpp
src/openMVG/vsslam/features/: Abstract_Feature_Extractor.hpp  Abstract_Feature_Matcher.hpp  Feat_Extractor_AKAZE_MLDB.hpp  Feat_Extractor_AKAZE_MSURF.hpp  Feat_Extractor_FAST_SURF.hpp  Feat_Extractor_SIFT.hpp  Feat_Matcher_CascadeHashing.hpp  Feat_Matcher_Regions.hpp
src/openMVG/vsslam/mapping/: Cartographer.cpp  Cartographer.hpp  Map.hpp  MapLandmark.cpp  MapLandmark.hpp  VSSLAM_data_io_ply.hpp
src/openMVG/vsslam/matching/: Abstract_FeatureMatcher.hpp  Feat_Matcher_Basic.hpp  Feat_Matcher_CascadeHashing.hpp
src/openMVG/vsslam/optimization/: CMakeLists.txt  Optimization.hpp  PoseEstimator.cpp  PoseEstimator.hpp  Sim3.hpp  VSSLAM_BA.hpp  VSSLAM_data_BA.hpp  VSSLAM_data_BA_ceres.cpp  VSSLAM_data_BA_ceres.hpp  VSSLAM_data_BA_ceres_camera_functor.hpp  VSSLAM_data_BA_slampp.cpp  VSSLAM_data_BA_slampp.hpp  sim3.hpp
src/openMVG/vsslam/optimization/ceres/: VSSLAM_BA_Ceres.cpp  VSSLAM_BA_Ceres.hpp  VSSLAM_BA_Ceres_camera_functor.hpp
src/openMVG/vsslam/optimization/slampp/: VSSLAM_BA_SlamPP.cpp  VSSLAM_BA_SlamPP.hpp
src/openMVG/vsslam/optimization/slampp/optimizers/: SlamPP_IO.hpp  SlamPP_Optimizer.hpp  SlamPP_Optimizer_SE3_gXYZ_gXYZ.hxx  SlamPP_Optimizer_Sim3_gXYZ_gXYZ.cpp  SlamPP_Optimizer_Sim3_gXYZ_gXYZ.hpp  SlamPP_Utils.hpp
src/openMVG/vsslam/optimization/slampp_optimizers/: CBAOptimizerCore_Sim3_gXYZ_gXYZ.app  SlamPP_IO.hpp  SlamPP_Optimizer.hpp  SlamPP_Optimizer_Sim3_gXYZ_gXYZ.cpp  SlamPP_Optimizer_Sim3_gXYZ_gXYZ.hpp  SlamPP_Utils.hpp
src/openMVG/vsslam/system/: Camera.cpp  Camera.hpp  Frame.cpp  Frame.hpp  slam_system.cpp  slam_system.hpp
src/openMVG/vsslam/tracking/: Abstract_FeatureExtractor.hpp  Abstract_Tracker.hpp  Feat_Extractor_FastDipole.hpp  Feat_Extractor_SIFT.hpp  Matching.hpp  MotionModel.hpp  PoseEstimation.cpp  PoseEstimation.hpp  Tracker_Features.cpp  Tracker_Features.hpp  Tracker_Features_Initialization.cpp
src/software/: CMakeLists.txt
src/software/Geodesy/: registration_to_exif_gps_position.cpp
src/software/Localization/: CMakeLists.txt  main_SfM_Localization.cpp  main_SfM_LocalizationReconstruction.cpp  main_SfM_ReconstructionLocalization.cpp
src/software/SfM/: CMakeLists.txt  SfMPlyHelper.hpp  main_ComputeFeatures.cpp  main_ComputeMatches.cpp  main_ComputeSfM_DataColorWithUncertainty.cpp  main_EstimateUncertainty.cpp  main_ExportIncrementalGraphFile.cpp  main_GlobalSfM.cpp  main_IncrementalSfM.cpp  main_IncrementalSfM2SLAMPP.cpp  main_SfMInit_ImageListing.cpp  main_openMVG2MICMAC.cpp
src/software/VO/: Tracker.hpp  main_VO.cpp
src/software/VSSLAM/: CMakeLists.txt  main_VSSLAM.cpp
src/software/VSSLAM/slam/: Abstract_FeatureExtractor.hpp  Abstract_Tracker.hpp  Feat_Extractor_FastDipole.hpp  Frame.hpp  PoseEstimation.hpp  SLAM_Monocular.hpp  Tracker_Features.hpp
src/software/VSSLAM/tests/: main_VSSLAM_unitTest.cpp
